Fix #35398: changing render layer name causes animation to be lost.